Moved several components to their own modules

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Barlow', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,6 +8,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.instructions {
+  text-align: center;
+}
+
+.instructions__ul {
+  list-style-type: none;
+}
+
+.instructions__li {
+  padding: 0.30rem 0;
 }
 
 .user_image__container {
@@ -115,3 +125,5 @@ code {
   }
   
 }
+
+
