--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,10 @@ code {
 
 .instructions {
   text-align: center;
+  height: 500px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
 }
 
 .instructions__ul {
@@ -24,7 +28,7 @@ code {
 
 .user_image__container {
   max-width: 100%;
-  max-height: 500px;
+  height: 500px;
   display: flex;
   justify-content: center;
 }
