--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,14 +16,7 @@ code {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-}
-
-.instructions__ul {
-  list-style-type: none;
-}
-
-.instructions__li {
-  padding: 0.30rem 0;
+  padding: 2rem;
 }
 
 .user_image__container {
@@ -67,6 +60,7 @@ code {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  padding: 0.50rem 0;
 }
 
 .color_box {
@@ -119,6 +113,7 @@ code {
 @media (max-width: 500px) {
   .color_box__container {
     justify-content: flex-start;
+    padding: 0.25rem 0.25rem;
   }
   .color_box {
     flex-basis: 100%;
