--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,18 +10,37 @@ code {
     monospace;
 }
 
+.lead {
+  font-size: 1.5rem;
+}
+
+.app__container {
+  margin: 0 auto;
+  max-width: 900px;
+}
+
 .instructions {
   text-align: center;
-  height: 500px;
+  height: 300px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  padding: 2rem;
+  padding-top: 2rem;
+}
+
+.instructions__wrapper {
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.instructions__h1 {
+  color: #ef2350;
+  font-size: 3rem;
 }
 
 .user_image__container {
   max-width: 100%;
-  height: 500px;
+  height: 300px;
   display: flex;
   justify-content: center;
   padding-top: 2rem;
@@ -56,17 +75,17 @@ code {
 }
 
 .color_box__container {
-  background-color: #222323;
+  background-color: #242424;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  padding: 0.50rem 0;
+  padding: 0.1rem;
 }
 
 .color_box {
-  flex-basis: 19%;
-  height: 175px;
-  margin: 0.25rem;
+  flex: 1 150px;
+  height: 150px;
+  margin: 0.1rem;
   position: relative;
 }
 
@@ -95,7 +114,10 @@ code {
   font-size: 1rem;
   }
   
-  @media (max-width: 800px) {
+  @media (max-width: 900px) {
+  .color_box__container {
+    padding: 0.1rem 0;
+  }  
   .color_box {
     flex-basis: 32%;
     margin: 0.15rem;
@@ -113,14 +135,18 @@ code {
 @media (max-width: 500px) {
   .color_box__container {
     justify-content: flex-start;
-    padding: 0.25rem 0.25rem;
+    padding: 0.1rem 0;
   }
   .color_box {
-    flex-basis: 100%;
+    flex-basis: 48%;
   }
   
   .user_image__container {
     max-height: 250px;
+  }
+  
+  .instructions__wrapper {
+    padding: 2rem;
   }
   
 }
